[project]
name = "lea"
dynamic = ["version", "license"]
description = "Discrete probability distributions in Python"
authors = [
    {name = "Pierre Denis", email = "pie.denis@skynet.be"},
]
dependencies = []
readme = "description.rst"
urls = {Homepage = "http://bitbucket.org/piedenis/lea"}
keywords = ["probability", "discrete", "distribution", "probabilistic programming"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"